--- a/AssetManagementApp/src/main/resources/application.properties
+++ b/AssetManagementApp/src/main/resources/application.properties
@@ -1,10 +1,22 @@
-spring.datasource.url=jdbc:h2:mem:tesdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:tesdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-ui
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.datasource.url = jdbc:mysql://localhost:3306/AMS
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-ui
+# hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHERrg.hibernate.dialect.MySQL5InnoDBDialect
